# opengl-tuttorials

./: README.md
yt13/: Main.cpp
yt14/: meson.build
yt3/: Main.cpp  meson.build
yt4/: Main.cpp  meson.build
yt5/: Main.cpp  default.nix
yt6/: Texture.h  default.nix  meson.build
yt7/: default.nix  meson.build  palle.nix
